# skills

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  skills-lock.json
.agents/: README.md
.agents/sub-agents/: evaluator.md  explorer.md  implementer.md  tester.md
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  skill_proposal.md  skill_request.md
.github/workflows/: babysit-pr.md  ci.yml  daily-repo-status.md  pr-skill-review.md  python-ci.yml  test-failure-analysis.md
.junie/mcp/: mcp.json
.junie/memory/: feedback.md
.junie/plans/: dspy-gepa.md
archive/: README.md
archive/fastapi/: README.md
archive/rlm-batch/: SKILL.md
archive/rlm-debug/: README.md
archive/rlm-run/: README.md
catalog/: README.md  schema.catalog.json  schema.skill.json
docs/: evaluation.md  safety.md  skill_contract.md  tagging.md  versioning.md
examples/: demo.py
scripts/: evaluate_skills_litellm.py  init_skill.py  package_skill.py  skills_cli.py  sync_figma_documents.py  sync_plugins.py  validate_skills.py
skills/: __init__.py
tests/: .gitignore  AGENTS.md  README.md  figma_skill_router.test.ts  package-lock.json  package.json  pnpm-lock.yaml  test_skills_catalog.py
tools/: new_skill.py  run_eval.py  validate.py
(+202 files in other folders)
