[project]
name = "skills"
version = "0.1.0"
description = "Qredence agent skills monorepo (Figma Design Agents and related tooling)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
exclude = [
    "**/assets",
    "**/templates",
    "tests"
]
