[project]
name = "skills"
version = "0.1.0"
description = "Curated Figma design and product skills for AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
exclude = [
    "**/assets",
    "**/templates",
    "tests"
]
